# superteam-marketplace

plugins/superteam/: .mcp.json  README.md  pyproject.toml  setup.sh
plugins/superteam/.claude-plugin/: plugin.json
plugins/superteam/.cursor-plugin/: plugin.json
plugins/superteam/skills/_shared/: chunking.py  config.py  db.py  embedding.py  oss_backup.py  pipeline.py  queries.py  super_member.py
plugins/superteam/skills/_shared/tests/: test_chunking.py  test_config.py  test_db.py  test_db_mcp.py  test_embedding.py  test_pipeline.py  test_queries.py  test_super_member.py
plugins/superteam/skills/hub/: SKILL.md
plugins/superteam/skills/hub/scripts/: route.py
plugins/superteam/skills/hub/tests/: conftest.py  test_route.py
plugins/superteam/skills/insight-data/: SKILL.md
plugins/superteam/skills/insight-docs/: SKILL.md
plugins/superteam/skills/insight-git/: SKILL.md
plugins/superteam/skills/insight-linear/: SKILL.md
plugins/superteam/skills/superteam/: SKILL.md
plugins/superteam/skills/superteam-data/: SKILL.md
plugins/superteam/skills/superteam-git/: SKILL.md
plugins/superteam/skills/superteam-knowledgebase/: SKILL.md
plugins/superteam/skills/superteam-linear/: SKILL.md
plugins/superteam/skills/superteam-member/: SKILL.md
plugins/superteam/skills/superteam-report/: SKILL.md
plugins/superteam/skills/superteam-report-team/: SKILL.md
plugins/superteam/skills/superteam-version/: SKILL.md
plugins/superteam/skills/superteam/scripts/: route.py
plugins/superteam/skills/version/: SKILL.md
plugins/superteam/skills/weekly-report/: SKILL.md
(+39 files in other folders)
